# docs/swagger.yaml
@@ -140,9 +140,6 @@ paths:
       - User
   /auth/user/register:
     post:
-      consumes:
-      - application/json
-      description: Register a new user account
       parameters:
       - description: Create user
         in: body
@@ -150,8 +147,6 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/entity.RegisterReq'
-      produces:
-      - application/json
       responses:
         "200":
           description: OK
@@ -165,9 +160,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/entity.Error'
-      summary: Create User
-      tags:
-      - User
   /tenders:
     get:
       consumes:
@@ -191,6 +183,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/entity.Error'
+      security:
+      - ApiKeyAuth: []
       summary: List All Tenders
       tags:
       - Tender
@@ -366,6 +360,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/entity.Error'
+      security:
+      - ApiKeyAuth: []
       summary: Get Bids for Tender
       tags:
       - Bids
@@ -400,6 +396,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/entity.Error'
+      security:
+      - ApiKeyAuth: []
       summary: Submit a bid on a tender
       tags:
       - Bids
@@ -458,6 +456,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/entity.Error'
+      security:
+      - ApiKeyAuth: []
       summary: Get User Tenders
       tags:
       - User
